--- a/projetRL/decoration/liste.css
+++ b/projetRL/decoration/liste.css
@@ -2,7 +2,7 @@ h1
 {
 	color:white;
 	text-align:center;
-	font-size:25px;
+	font-size:40px;
 }
 h2
 {
@@ -31,9 +31,15 @@ h4
 	font-size:30px;
 	padding-bottom:2%;
 }
+
+nav
+{
+	margin-bottom:8em;
+}
+
 nav ul 
 {
-	
+	background-color:transparent;
 	margin:0;
 	padding:0;
 	list-style-type:none;
@@ -48,17 +54,16 @@ nav li
 
 nav li a
 {
-	background-color:blue;
+	font-size:20px;
 	font-weight:bold;
 	color:white;
 	display:block;
 	text-decoration:none;
-	margin:20px;
 	padding:10px;
 	width:150px;
 }
 
-nav ul li ul li
+nav ul li ul
 {
 	display:none;
 }
@@ -74,14 +79,6 @@ nav li ul
 	position:absolute;
 }
 
-nav li a:hover
-{
-	background-color:white;
-}
-nav ul li a:hover
-{
-	color:blue;
-}
 p
 {
 	color:black;
@@ -94,7 +91,7 @@ p
 	text-align:center;
 	display:block;
 	border: solid white 5px;
-	
+	margin:3%;
 }
 
 #article
@@ -116,9 +113,23 @@ body
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-position: right top;
+	margin:0;
 }
 
 div
 {
 	background-color:white;
+}
+
+.scale-effect
+{
+	transition:transform 0.5s;
+}
+	
+.scale-effect:hover
+{
+	transform:scale(1.1);
+	text-decoration:underline;
+	color:black;
+	background-color:GhostWhite;
 }
