--- a/projetRL/decoration/style.css
+++ b/projetRL/decoration/style.css
@@ -5,8 +5,12 @@ body{
 }
 
 h1{
-	font-family:"Dancing Script",cursive;
 	text-align:center;
+}
+
+nav
+{
+	margin-bottom:7em;
 }
 
 form{
@@ -69,14 +73,14 @@ input[type="submit"]{
 	padding:20px;
 	border-radius:50px;
 	border:0;
-	background-color:blue;
+	background-color:black;
 	font-size:16px;
 	color:#fff;
 }
 
 input[type="submit"]:hover{
 	background-color:#fff;
-	color:blue;
+	color:black;
 }
 @media screen and (max-width:500px){
 	form{
