--- a/projetRL/decoration/competition.css
+++ b/projetRL/decoration/competition.css
@@ -1,22 +1,33 @@
+body
+{
+	background-image:url("liste-background.jpg");
+	background-size: 100% 100%;
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-position: right top;
+	margin:0;
+}
+
 h1
 {
 	color:white;
 	text-align:center;
 	font-size:40px;
 }
+
 h2
 {
 	color:white;
 	margin:auto;
 	text-align:center;
 	padding-top:2%;
+	font-size:35px;
 	padding-bottom:2%;
-	font-size:30px;
 }
 
 h3
 {
-	color:black;
+	color:white;
 	text-align:center;
 	font-size:25px;
 }
@@ -68,75 +79,18 @@ nav li ul
 	position:absolute;
 }
 
-.flex
-{
-	display:flex;
-	width:100%;
-	margin:0;
-	padding:0;
-	text-align:center;
-}
-
-#article
-{
-	width:800px;
-	position:relative;
-	margin:auto;
-}
-
-.articles
+#description
 {
 	text-align:center;
-	display:block;
-	border: solid white 5px;
-	margin:3%;
+	color:white;
+	font-size:21px;
+	margin-bottom:5em;
 }
 
-#img1
+.description
 {
+	width:60%;
 	margin:auto;
-	height:auto; 
-	display:block;
-}
-#img2
-{
-	margin:auto;
-	height:auto; 
-	display:block;
-	padding-top:5%;
-}
-#img3
-{
-	margin:auto;
-	height:auto; 
-	display:block;
-}
-
-p
-{
-	color:black;
-	text-align:center;
-	font-size:20px;
-}
-
-div
-{
-	background-color:white;
-}
-
-body
-{
-	background-image:url("liste-background.jpg");
-	background-size: 100% 100%;
-	background-repeat:no-repeat;
-	background-attachment:fixed;
-	background-position: right top;
-	margin:0;
-}
-
-.image
-{
-	width:100%;
 }
 
 .scale-effect
@@ -150,4 +104,11 @@ body
 	text-decoration:underline;
 	color:black;
 	background-color:GhostWhite;
+}
+
+.video-historique
+{
+	width:60%;
+	margin:auto;
+	padding-bottom:3em;
 }
